# zetid_inference_framework

./: .gitignore  CMakeLists.txt  README.md  ios.toolchain.cmake  mobile_model.zetic
doc/: ASSIGNMENT_SOLUTION.md  PROJECT_SUMMARY.md  USER_GUIDE.md  assignment.md
examples/: neural_example.cpp
scripts/: BUILD_INSTRUCTIONS.md  build_and_run_examples.sh  build_android_tests.sh  build_cmake.sh  build_ios_tests.sh  build_simple_tests.sh
src/: linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h  model_registry.cpp  model_registry.h  multi_class_classifier.cpp  multi_class_classifier.h  neural_network_interface.h  test_data_loader.h  two_layer_mlp.cpp  two_layer_mlp.h
tests/: CMakeLists.txt  test_neural_interface.cpp
tests/data/: linear_regression_demo.txt  logistic_regression_demo.txt  multi_class_demo.txt  two_layer_mlp_demo.txt
